--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "axios": "^1.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
